--- a/web/templates/partials/pages/structures.html
+++ b/web/templates/partials/pages/structures.html
@@ -151,8 +151,8 @@
 
     <div>
       <span class="font-semibold">Trailing commas.</span>
-      Map literals currently do not allow a trailing comma after the
-      last key&ndash;value pair.
+      Trailing commas after the
+      last key&ndash;value pair are allowed.
     </div>
 
     <div>
