--- a/web/templates/partials/pages/errors.html
+++ b/web/templates/partials/pages/errors.html
@@ -98,29 +98,29 @@
       <div class="text-sm text-gray-300 font-medium">inline-error-handling.ego</div>
       <div class="text-xs text-gray-500">example</div>
     </div>
-    <pre class="p-5 text-base overflow-x-auto"><code class="text-gray-200">a := ['1', '2', '3']
+    <pre class="p-5 text-base overflow-x-auto"><code class="text-gray-200"><span class="variable">a</span> <span class="operator">:=</span> <span class="operator">[</span><span class="string">'1'</span>, <span class="string">'2'</span>, <span class="string">'3'</span><span class="operator">]</span>
 
-# inline error handling with else clause
-val := a[3] else
-    put('There was an error accessing the array...')
-    ret nil
-;
-
-
-# return built-in error value
-:get arr, index
-   ret arr[index] else $E
-;
+<span class="comment"># inline error handling with else clause</span>
+<span class="variable">val</span> <span class="operator">:=</span> <span class="variable">a</span><span class="operator">[</span><span class="number">3</span><span class="operator">]</span> <span class="keyword">else</span>
+  <span class="function">put</span>(<span class="string">'There was an error accessing the array...'</span>)
+  <span class="keyword">ret</span> <span class="keyword">nil</span>
+<span class="operator">;</span>
 
 
-b := get(a, 3)
+<span class="comment"># return built-in error value</span>
+<span class="operator">:</span><span class="function">get</span> <span class="variable">arr</span>, <span class="variable">index</span>
+  <span class="keyword">ret</span> <span class="variable">arr</span><span class="operator">[</span><span class="variable">index</span><span class="operator">]</span> <span class="keyword">else</span> <span class="variable">$E</span>
+<span class="operator">;</span>
 
-# check if function returned an error object
-if error(b)
-    put(b['message'])
-else
-    put('Value: ' + b)
-;</code></pre>
+
+<span class="variable">b</span> <span class="operator">:=</span> <span class="function">get</span>(<span class="variable">a</span>, <span class="number">3</span>)
+
+<span class="comment"># check if function returned an error object</span>
+<span class="keyword">if</span> <span class="function">error</span>(<span class="variable">b</span>)
+  <span class="function">put</span>(<span class="variable">b</span><span class="operator">[</span><span class="string">'message'</span><span class="operator">]</span>)
+<span class="keyword">else</span>
+  <span class="function">put</span>(<span class="string">'Value: '</span> <span class="operator">+</span> <span class="variable">b</span>)
+<span class="operator">;</span></code></pre>
   </div>
 
   <div class="mt-4 space-y-3 text-base text-gray-300">
